[package]
name = "ht-fw"
version = "0.1.0"
authors = ["Pierrick Curt <pierrickcurt@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
critical-section    = "1.1.2"
esp-backtrace = { version = "0.13.0", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.19.0", features = ["async", "esp32c3"]}
esp-hal-embassy = { version = "0.2.0", features = [ "esp32c3", "integrated-timers"] }
embassy-executor =  { version = "0.5.0" }
embedded-hal-bus = { version = "0.2.0" }
embedded-io         = { version = "0.6.1", default-features = false }
esp-println = { version = "0.10.0", features = ["esp32c3", "log"] }
log = { version = "0.4.21" }
embassy-time = "0.3.0"
static_cell         = { version = "2.1.0", features = ["nightly"] }
embedded-cli = "0.2.1"
nb = "1.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
